# kokoro-bot

./: .env.example  .gitignore  README.md  context.md  documentation-audio-intell-deepgram.md  pyproject.toml  requirements.txt
src/kokoro/: __init__.py  __main__.py  analyzer.py  config.py  deepgram_client.py  discord_bot.py  models.py  report.py  utils.py  voice_recorder.py
tests/: test_analyzer.py
